--- a/react_webviews/src/loan_idfc/components/Style.scss
+++ b/react_webviews/src/loan_idfc/components/Style.scss
@@ -77,7 +77,7 @@
       display: -webkit-box;
       margin: 0 0 10px 0;
     }
-  
+
     .agree-tiles-left {
       color: #0a1d32;
       height: 6px;
@@ -419,7 +419,7 @@
     color: var(--primary);
   }
 
-  .helper-text  {
+  .helper-text {
     margin: 0;
     font-size: 0.75rem;
     text-align: left;
@@ -475,7 +475,6 @@
     margin-right: auto;
     width: 100%;
   }
-  
 }
 
 .eligible-loan {
@@ -856,18 +855,23 @@
   .block2-info {
     margin: 40px 0 35px 0;
 
+    .card-lending {
+      box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.12),
+        0px 0px 8px rgba(0, 0, 0, 0.0483186) !important;
+    }
+
     .top-title {
       font-weight: 800;
       font-size: 17px;
       margin-bottom: 20px;
     }
 
-    .generic-page-title{
+    .generic-page-title {
       font-weight: 600;
     }
 
     .top-tile {
-      .generic-page-title{
+      .generic-page-title {
         font-size: 17px;
       }
     }
@@ -876,12 +880,14 @@
       display: flex;
       align-items: center;
 
-      img {
-        width: 35px;
-      }
-
       .title {
         font-size: 15px;
+      }
+
+      .generic-page-title {
+        img {
+          margin-left: 8px;
+        }
       }
 
       .subtitle {
@@ -1122,7 +1128,7 @@
     }
   }
 
-  .eligibility  {
+  .eligibility {
     img {
       width: 35px;
     }
@@ -1135,10 +1141,9 @@
   }
 }
 
-.react-autosuggest__suggestions-container--open{
+.react-autosuggest__suggestions-container--open {
   max-height: 400px !important;
 }
-
 
 .render-camera {
   border: 1px dashed #e1e1e1;
@@ -1177,7 +1182,7 @@
   }
 
   .img {
-    width: 100%; 
+    width: 100%;
     height: 150;
   }
 
@@ -1206,5 +1211,5 @@
   font-size: 20px;
   text-align: center;
   color: var(--primary);
-  margin-top: 200px
+  margin-top: 200px;
 }
