--- a/react_webviews/src/common/components/components-base/Style.scss
+++ b/react_webviews/src/common/components/components-base/Style.scss
@@ -1,3 +1,8 @@
+.compoenets-base{
+    margin-left: 5%;
+    margin-right: 50%;
+}
+
 .header-components-base{
     background-color: #4f2da7;
     padding: 30px;
