--- a/react_webviews/src/common/theme/Style.scss
+++ b/react_webviews/src/common/theme/Style.scss
@@ -1335,7 +1335,7 @@ input#pan {
     .head {
       text-align: center;
       font-size: 13px;
-      color: #767E86;
+      color: #160D2E;
       margin-bottom: 10px;
     }
   }
@@ -1380,8 +1380,8 @@ input#pan {
     }
 
     .dot {
-      height: 8px;
-      width: 8px;
+      height: 10px;
+      width: 10px;
       border: 1px solid var(--primary);
       background-color: #E3EFFF;
       // background-color: var(--primary);
