--- a/react_webviews/src/loan_idfc/components/Style.scss
+++ b/react_webviews/src/loan_idfc/components/Style.scss
@@ -119,8 +119,9 @@
     font-size: 20px;
     color: #0a1d32;
     font-weight: 400;
-    margin: 20px 10px 30px;
+    margin: 10px 10px 30px;
     line-height: 30px;
+    text-align: center;
   }
 
   .amount-inr {
@@ -368,9 +369,6 @@
 
 .basic-details {
   margin-bottom: 40px;
-  .InputField {
-    margin-bottom: 30px !important;
-  }
   .basic-details-subtitle {
     font-weight: 600;
     color: #0a1d32;
@@ -396,24 +394,16 @@
     width: 47%;
     cursor: pointer;
     border-radius: 6px;
-    box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.12), 0px 2px 5px rgba(0, 0, 0, 0.05);
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.12), 0px 2px 5px rgba(0, 0, 0, 0.05);
   }
 }
 
 .professional-details {
   margin-bottom: 40px;
-
-  .InputField {
-    margin-bottom: 30px !important;
-  }
 }
 
 .personal-details {
   margin-bottom: 40px;
-
-  .InputField {
-    margin-bottom: 30px !important;
-  }
 
   .MuiFormHelperText-root {
     color: var(--primary);
@@ -438,10 +428,6 @@
   color: #0a1d32;
   margin-bottom: 30px;
 
-  .InputField {
-    margin-bottom: 30px !important;
-  }
-
   .head-title {
     margin: 10px 0;
   }
@@ -465,7 +451,6 @@
     line-height: 24px;
     color: #0a1d32;
     opacity: 0.55;
-    width: 95%;
     margin-top: 20px;
   }
 
@@ -906,28 +891,21 @@
     .partners {
       display: flex;
       padding: 10px 0;
-      // justify-content: space-evenly;
       text-align: center;
       font-size: 16px;
       line-height: 19px;
       color: #160d2e;
       margin-top: 20px;
 
-      .card {
+      img {
         box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.12),
           0px 2px 2px rgba(0, 0, 0, 0.0483186);
-        border-radius: 6px;
-        display: flex;
-        align-items: center;
-        flex-direction: column;
-        // height: 110px;
-
-        img {
-          padding: 25px;
-          // width: 60px;
-        }
       }
     }
+  }
+
+  .content-title {
+    font-size: 15px !important;
   }
 }
 
@@ -944,8 +922,13 @@
 
     .sub-text {
       font-size: 15px;
-      line-height: 20px;
+      line-height: 2;
       color: #767e86;
+    }
+
+    .sub-text-2 {
+      font-size: 15px;
+      // color: #767e86;
     }
 
     button {
@@ -975,7 +958,7 @@
     div :nth-child(2) {
       font-size: 13px;
       line-height: 20px;
-      color: var(--primary);
+      color: #767E86;
       padding: 5px 0;
     }
   }
@@ -1080,7 +1063,7 @@
     width: 47%;
     cursor: pointer;
     border-radius: 6px;
-    box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.12), 0px 2px 5px rgba(0, 0, 0, 0.05);
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.12), 0px 2px 5px rgba(0, 0, 0, 0.05);
   }
 }
 
@@ -1113,7 +1096,8 @@
       div :nth-child(2) {
         font-size: 13px;
         line-height: 20px;
-        color: var(--primary);
+        color: #767E86;
+        ;
         padding: 5px 0;
       }
     }
@@ -1126,6 +1110,10 @@
     .loan-amount {
       font-weight: 600;
     }
+  }
+
+  .content-subtitle {
+    font-size: 15px !important;
   }
 
   .eligibility {
@@ -1142,7 +1130,10 @@
 }
 
 .react-autosuggest__suggestions-container--open {
-  max-height: 400px !important;
+  max-height: 350px !important;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.12),
+      0px 2px 2px rgba(0, 0, 0, 0.0483186) !important;
+  border-color: #a2a2a2 !important;
 }
 
 .render-camera {
