--- a/react_webviews/src/loan_idfc/components/Style.scss
+++ b/react_webviews/src/loan_idfc/components/Style.scss
@@ -304,11 +304,19 @@
 }
 
 .upload-bank-statement {
-  margin: 30px 0 50px;
   .upload-button {
     padding: 8px 20px !important;
     border: 1px solid var(--secondary) !important;
     border-radius: 6px !important;
+  }
+
+  .upload-statement-notes {
+    display: flex;
+    margin-bottom: 20px;
+  }
+
+  .upload-statement-notes:nth-child(6) {
+    margin-bottom: 0px;
   }
 
   .edit-or-delete {
@@ -327,7 +335,8 @@
     font-size: 12px;
     font-weight: 1000;
     background: linear-gradient(90deg, #f7f6f6 0%, #ffffff 98.76%);
-    margin: 0 -20px;
+    margin: 20px -20px 50px;
+
     padding: 30px 20px;
     cursor: pointer;
     letter-spacing: 1px;
@@ -677,44 +686,54 @@
   }
 }
 
-.render-faqs-title {
-  color: #767e86;
-  padding: 13px 0;
-  font-weight: 600;
-  font-size: 15px;
-  line-height: 21px;
-  display: flex;
-  justify-content: space-between;
-}
+.idfc-faqs {
+  .render-faqs-title {
+    color: #767e86;
+    padding: 13px 0;
+    font-weight: 600;
+    font-size: 15px;
+    line-height: 21px;
+    display: flex;
+    justify-content: space-between;
+  }
 
-.render-faqs-table-content {
-  margin-bottom: 35px;
-  border-bottom: 1px solid #d7d4d4;
+  .render-faqs-table-content {
+    margin-bottom: 35px;
+    border-bottom: 1px solid #d7d4d4;
 
-  .render-faqs-table {
-    border: 1px solid;
-    text-align: center;
-    border-collapse: collapse;
-
-    .render-faqs-table-title {
+    .render-faqs-table {
       border: 1px solid;
-      padding: 10px 5px;
-      width: 40%;
+      text-align: center;
+      border-collapse: collapse;
+
+      .render-faqs-table-title {
+        border: 1px solid;
+        padding: 10px 5px;
+        width: 40%;
+      }
+
+      .render-faqs-table-subtitle {
+        border: 1px solid;
+        padding: 10px 5px;
+        width: 60%;
+      }
     }
+  }
 
-    .render-faqs-table-subtitle {
-      border: 1px solid;
-      padding: 10px 5px;
-      width: 60%;
+  .generic-render-faqs {
+    .top-title {
+      font-weight: 600;
     }
   }
 }
 
 .LoaderOverlay {
   .LoaderOverlay-title {
-    font-size: 14px;
+    font-size: 13px;
     line-height: 20px;
     margin: 0 -70px 0 -70px;
+    color: #160d2e;
+    padding: 0 40px;
   }
 
   .LoaderOverlay-image {
@@ -760,7 +779,7 @@
     display: flex;
     justify-content: space-between;
     padding: 10px 15px;
-    color: #767E86;
+    color: #767e86;
     font-size: 13px;
   }
 }
@@ -850,12 +869,12 @@
     font-size: 15px !important;
     text-align: center;
     margin: 20px 0 10px 0;
-    color: #160D2E;
+    color: #160d2e;
   }
 
   .sub-head {
     text-align: center;
-    color: #767E86;
+    color: #767e86;
     margin-bottom: 10px;
     font-size: 13px;
   }
@@ -878,13 +897,13 @@
 
   .title {
     font-weight: 600;
-    color: #767E86;
+    color: #767e86;
     font-size: 13px;
   }
 
   .values {
     font-size: 15px;
-    color: #0A1D32;
+    color: #0a1d32;
   }
 }
 
@@ -912,6 +931,10 @@
 
   .block2-info {
     margin: 40px 0 35px 0;
+
+    .MuiCardContent-root {
+      padding: 16px !important;
+    }
 
     .card-lending {
       box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.12),
@@ -1294,4 +1317,8 @@
     margin-top: 10px;
     line-height: 1.5;
   }
+}
+
+.idfc-eligibility {
+  margin-bottom: 20px;
 }
