--- a/react_webviews/src/loan_idfc/components/Style.scss
+++ b/react_webviews/src/loan_idfc/components/Style.scss
@@ -292,10 +292,11 @@
   }
 
   .sub-head {
-    font-size: 14px;
+    font-size: 13px;
     font-weight: 400;
     color: #767e86;
     line-height: 24px;
+    width: 96%;
   }
 
   .generic-page-title {
