--- a/react_webviews/src/dashboard/Style.scss
+++ b/react_webviews/src/dashboard/Style.scss
@@ -1,17 +1,20 @@
 .my-account {
   background-color: white;
   height: 100%;
+  margin: -20px;
+
   .my-account-content {
     padding-bottom: 20px;
     background: #f1f1f1;
+
     .account {
       background-color: white;
+
       .account-head-title {
-        padding: 10px;
-        // font-family: "LatoB";
+        padding: 20px 10px 10px 10px;
         font-weight: 900;
         color: #4a4a4a;
-        font-size: 14px;
+        font-size: 16px;
       }
 
       .account-options {
@@ -34,6 +37,7 @@
     }
   }
 }
+
 .my-account-dialog {
   .content {
     padding: 15px;
@@ -51,7 +55,7 @@
       min-width: 80px;
       padding: 5px 24px;
     }
-  
+
     .cancel {
       color: var(--primary);
       background: transparent;
@@ -59,9 +63,11 @@
     }
   }
 }
+
 .notification {
   background-color: white;
   padding: 30px 0 15px 0;
+  margin: -20px;
 
   .message {
     color: #333333;
@@ -101,7 +107,6 @@
         h4 {
           margin: 0;
           font-size: 16px;
-          // font-family: "Roboto";
           color: #4f2da7;
           font-weight: 500;
           line-height: 1.1;
