--- a/react_webviews/src/loan_idfc/components/Style.scss
+++ b/react_webviews/src/loan_idfc/components/Style.scss
@@ -262,6 +262,12 @@
     color: #979797;
     text-align: center;
     margin: 30px 0;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  hr {
+    width: 50%;
   }
 
   .card-content {
@@ -472,11 +478,26 @@
     font-weight: 500;
   }
 
+  .head-title {
+    color: #160D2E;
+    font-size: 20px;
+    font-weight: 800;
+    margin-top: 30px;
+  }
+
   img {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 75%;
+  }
+
+  .sub-msg {
+    .sub-title-2 {
+      margin-top: 0px;
+      color: #160D2E;
+      font-size: 13px;
+      line-height: 1.5;
+    }
   }
 }
 
