--- a/react_webviews/src/loan_idfc/components/Style.scss
+++ b/react_webviews/src/loan_idfc/components/Style.scss
@@ -264,10 +264,11 @@
     margin: 30px 0;
     display: flex;
     justify-content: space-between;
+    align-items: center;
   }
 
-  hr {
-    width: 50%;
+  .generic-hr {
+    width: 45%;
   }
 
   .card-content {
@@ -295,6 +296,76 @@
     font-weight: 600;
     color: #0a1d32;
     margin: 30px 0 10px 0;
+  }
+
+  .bct-top-title {
+    font-weight: 600 !important;
+  }
+
+  .bct-content {
+    padding: 30px 0 0 10px !important;
+  }
+
+  .bottom-content {
+    margin: 30px 0;
+    .bct-top {
+      display: flex;
+      justify-content: space-between;
+    }
+
+    .bc-tile {
+      margin: 10px 0 10px 0;
+      padding: 6px 0 15px 0;
+      border-bottom: 1px solid #ededed;
+      cursor: pointer;
+    }
+
+    .bct-top-title {
+      color: #0a1d32;
+      font-size: 14px;
+      font-weight: 500;
+    }
+
+    .bct-content {
+      padding: 30px 0 20px 10px;
+    }
+    .bctc-tile {
+      margin: 0 0 20px 0;
+    }
+
+    .title {
+      color: #767e86;
+      font-size: 10px;
+      font-weight: 700;
+    }
+
+    .subtitle {
+      color: #767e86;
+      font-size: 14px;
+      font-weight: 400;
+      margin: 7px 0 0 0;
+      line-height: 1.3;
+    }
+  }
+
+  .bt-faq {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+
+    img {
+      margin-right: 20px;
+    }
+
+    div {
+      color: #767e86;
+      font-size: 13px;
+      line-height: 1.5;
+    }
+
+    .reqd_info {
+      margin-top: 4%;
+    }
   }
 
   .sub-head {
@@ -479,7 +550,7 @@
   }
 
   .head-title {
-    color: #160D2E;
+    color: #160d2e;
     font-size: 20px;
     font-weight: 800;
     margin-top: 30px;
@@ -494,7 +565,7 @@
   .sub-msg {
     .sub-title-2 {
       margin-top: 0px;
-      color: #160D2E;
+      color: #160d2e;
       font-size: 13px;
       line-height: 1.5;
     }
@@ -561,6 +632,7 @@
         font-size: 17px;
         line-height: 26px;
         color: #0a1d32;
+        overflow: auto;
       }
     }
   }
@@ -603,26 +675,42 @@
 }
 
 .loan-bt {
+  margin-bottom: 40px;
   .subtitle {
     font-size: 13px;
     color: #0a1d32;
     opacity: 0.55;
   }
 
+  .header-title-page{
+    font-size: 20px;
+    font-weight: 700;
+    color: #160D2E;
+    line-height: 1.5;
+    padding: 0;
+    display: flex;
+    text-align: start;
+    align-items: flex-start;
+    margin-bottom: 20px;
+
+    .count {
+      font-size: 15px;
+      color: #81888F;
+    }
+
+    .total {
+      font-size: 13px;
+      font-weight: 500;
+    }
+  }
+
   .loan-bt-checkbox {
     margin-top: 20px;
 
     .head {
-      margin-top: 20px;
+      margin: 20px 0;
       font-size: 13px;
       line-height: 15px;
-      color: #767e86;
-    }
-
-    .sub-head {
-      margin: 10px 0 20px;
-      font-size: 13px;
-      line-height: 16px;
       color: #0a1d32;
     }
   }
@@ -755,7 +843,6 @@
     line-height: 20px;
     margin: 0 -70px 0 -70px;
     color: #160d2e;
-    padding: 0 40px;
   }
 
   .LoaderOverlay-image {
